# contact-verifier

./: .env.example  .gitignore  ARCHITECTURE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 425dfa144b23_initial_schema.py
src/contact_verifier/: app.py  auth.py  cli.py  config.py  export.py  logging.py  observability.py  services.py
src/contact_verifier/api/: deps.py  routes.py  schemas.py
src/contact_verifier/data/: sample_contacts.json
src/contact_verifier/db/: base.py  models.py  repository.py
src/contact_verifier/mcp/: server.py
src/contact_verifier/verify/: dns.py  email.py  engine.py
tests/: conftest.py  test_api.py  test_docs.py  test_export.py  test_health.py  test_mcp.py  test_mcp_tenant_isolation.py  test_verify.py
